TOWER-54-bug-(styling): project roles horizontal scroll
 - add horizontal scroll to project roles
 - update project names to remain constant (as entered by user)

[Fixes TOWER-54]

--- a/src/assets/sass/utilities/_utilities.scss
+++ b/src/assets/sass/utilities/_utilities.scss
@@ -3,3 +3,7 @@ Utilities
 -----------------------------------
 This folder is responsible for storing utility-namespaced classes eg. .wt-text-center
 */
+
+.overflow-x-auto {
+    overflow-x: auto;
+}
